--- a/src/app.html
+++ b/src/app.html
@@ -5,6 +5,8 @@
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
+		 <link rel='stylesheet' href='/css/spaces.css'>
+
 	</head>
 	<body>
 		<div>%sveltekit.body%</div>
